# 42-Commmon-Core

./: C Manua..pages
2 DONE/A mazing DONE/: README.md  output_writer.py
2 DONE/A mazing DONE/mazegen/: generator.py
2 DONE/A mazing ENTREGA/: config.txt  export_svg.py  generator.py  solver.py
2 DONE/A mazing ENTREGA/mazegen/: __init__.py  maze.py
2 DONE/a_maze_ing DONE/: .gitignore  Explanation.docx  TOOLS.docx
2 DONE/a_maze_ing DONE/a_maze_ing/: Makefile  README.md  a_maze_ing.py  config.txt  (+3 more)
2/A-maz-ing/: a_maze_ing.py  config_parser.py  maze.py  renderer_ascii.py  renderer_mlx.py  requirements.txt
3/Call Me Maybe/: Explanation.md  Makefile  README.md  __main__.py  call_me_maybe_documentation.docx  explanation.docx  models.py  pipeline.py  prompt_builder.py  pydantic.pyi  pyproject.toml
3/Call Me Maybe/core/: Makefile  README.md  __init__.py  decoder.py  loader.py  pyproject.toml  run_tests.py  test_pipeline.py
3/Call Me Maybe/core/llm_sdk/: __init__.py
3/Call Me Maybe/llm_sdk/llm_sdk/: __init__.py
3/Call Me Maybe/src/: __init__.py  __main__.py  decoder.py  file_io.py  function_selector.py  loader.py  models.py  pipeline.py  prompt_builder.py  pydantic.pyi  vocabulary.py
3/Codexion/: Codexion_Explanation.docx  Makefile  README.md  args.c  coder.c  codexion.h  dongle.c  log.c  main.c  monitor.c  pqueue.c  sim.c  time_utils.c
3/Fly-in/: Fly-in_Explicacao_Codigo.docx  README.md  connection.py  drone.py  flyin_guia.docx  graph.py  main.py  parser.py  pathfinder.py  simulator.py  zone.py
3/Fly-in DONE/: Code explanation.docx  Makefile  parser.py
(+63 files in other folders)
