[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Introduction to function calling in LLMs using constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
